# rise-local-lead-creation

./: .env.example  .gitignore  APPLY_MIGRATIONS.md  CLAUDE_CONTEXT.md  CREATE_GITHUB_REPO.md  DEPENDENCIES.md  DEPLOYMENT_ARCHITECTURE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  INSTALLATION_GUIDE.md  LICENSE  MCP_IMPLEMENTATION.md  MODERNIZATION_OVERVIEW.md  Makefile  PRODUCTION_READINESS_ROADMAP.md  QUICK_START.md  README.md  SECURITY_IMPLEMENTATION.md  SETUP_SECRETS.md  TABLES_QUICK_REFERENCE.md  TABLES_SCHEMA_IMPLEMENTATION.md  ZAPIER_TABLES_SETUP.md  clay_contact_waterfall_template.csv  configure_sheet.py  docker-compose.yml  pyproject.toml  requirements.txt  run_phase_2_batch.py  test_yext.py
.github/agents/: my-agent.agent.md
.github/workflows/: ci.yml
agents/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  api_server.py  qualification_validator.py  requirements.txt  start.sh  test_qualification.py
api/: config_server.py
custom_tools/: .env.example  README.md  docker-compose.yml
custom_tools/address_verifier/: Dockerfile  README.md  api.py  verifier.py
custom_tools/bbb_scraper/: Dockerfile  api.py  bbb_scraper.py  requirements.txt
custom_tools/dify_tool_configs/: bbb_scraper_openapi.yaml  pagespeed_openapi.yaml  pain_point_scoring_code.py  screenshot_service_openapi.yaml  tdlr_scraper_openapi.yaml
custom_tools/owner_extractor/: Dockerfile  api.py  (+3 more)
dashboard/: app.js  auth.js  index.html  login.html  styles.css
docs/: ARCHITECTURE.md  CLAY_WORKFLOW.md  DASHBOARD_USAGE.md  GITHUB_COPILOT_CHEAT_SHEET.md  SETUP_GOOGLE_SHEETS.md  TROUBLESHOOTING.md  WORDPRESS_LANDING_PAGES.md
dotenv/: __init__.py
marketing/: README.md  package.json
mcp_server/: Dockerfile  README.md  requirements.txt  server.py  test_mcp.py
rise_pipeline/: __init__.py  agent_models.py  config.py  email_generator.py  env.template  google_sheets.py  models.py  pipeline.py  reprocess_phase2.py  requirements.txt  scoring.py  services.old.py  services.py  tech_stack_scorer.py  test_integrations.py  test_pipeline.py
scripts/: README.md  apply_migrations.py  dashboard_generator.py  import_clay_builtwith.py  migrations_viewer.html  run_prequalification_batch.py  setup_google_sheet.py  verify_credentials.py  verify_migrations.py
supabase/: init_tables.py
tests/: __init__.py  test_e2e_pipeline.py  test_professional_lead.py
wordpress-landing-pages/: README.md
zapier_workflows/: MASTER_IMPLEMENTATION_GUIDE.md  zap_01_discovery_coordinator.md  zap_02_clay_export_automation.md  zap_03_tables_sync.md  zap_04_qualification_trigger.md  zap_05_delivery_router.md
(+53 files in other folders)
