[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rise-local-lead-creation"
version = "1.0.0"
description = "Automated lead generation and qualification pipeline for local service businesses"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary - Rise Local"}
authors = [
    {name = "Rise Local Team"},
]
keywords = ["lead-generation", "automation", "ai", "local-business"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "supabase>=2.0.0",
    "anthropic>=0.18.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.22.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "pandas>=2.0.0",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

services = [
    "playwright>=1.40.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "google-generativeai>=0.3.0",
    "Pillow>=10.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/JSXSTEWART/rise-local-lead-creation"
Issues = "https://github.com/JSXSTEWART/rise-local-lead-creation/issues"
Repository = "https://github.com/JSXSTEWART/rise-local-lead-creation"

[project.scripts]
rise-prequalify = "run_prequalification_batch:main"
rise-phase2 = "run_phase_2_batch:main"

[tool.setuptools]
packages = ["rise_pipeline"]

[tool.setuptools.package-data]
rise_pipeline = ["*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["rise_pipeline", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rise_pipeline.*"
ignore_missing_imports = true
